# wrap-burn

./: Cargo.toml  README.md  ideas.md  justfile  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
guide/: intro.md
src/: changes.md  lib.rs  nn.rs  optim.rs  record.rs  train.rs
src/grad_clipping/: mod.rs
src/lr_scheduler/: mod.rs
src/module/: mod.rs
src/ndarray/: mod.rs
src/ndarray/nn/: common_nn_exports.rs  mod.rs  ndarray_nn_exports.rs
src/ndarray/tensor/: mod.rs  ndarray_base.rs
src/ndarray/train/: base.rs  mod.rs
src/nn/: common_nn_exports.rs  mod.rs  ndarray_nn_exports.rs  tensor_error.rs  wgpu_nn_exports.rs
src/optim/: common_exports.rs  mod.rs  ndarray_optim_exports.rs  wgpu_optim_exports.rs
src/tensor/: base.rs  mod.rs  ndarray_base.rs  tensor_error.rs  wgpu_base.rs
src/tests/: mod.rs  nn_tests.rs
src/train/: base.rs  mod.rs
src/wgpu/: mod.rs
src/wgpu/nn/: common_nn_exports.rs  mod.rs  wgpu_nn_exports.rs
src/wgpu/tensor/: mod.rs  wgpu_base.rs
src/wgpu/train/: base.rs  mod.rs
